# learn-devops

./: .ansible-lint  .gitignore  .markdownlint.yml  .pre-commit-config.yaml  LICENSE  README.md  requirements.txt
.github/workflows/: AUTO_PR.yml
ansible/: ansible.cfg  docker.yaml  install_minio.yml  install_nginx.yml  inventory.yml  kubeadm.yml
ansible/roles/ntp_install/: README.md
docker/: .dockerignore  Dockerfile  README.md  deploy.sh  docker-compose.yaml  main.go  nginx.tmpl
docker/blue-green-deployment/: Dockerfile  README.md  docker-compose.yaml
docker/uv/: .dockerignore  Dockerfile  Dockerfile.pip  Makefile  README.md  main.py  pyproject.toml  requirements.txt
kubeadm/: README.md
kubeadm/cilium/: ippool.yaml  l2-announcement-policy.yaml  values.yaml
kubeadm/kube-prometheus-stack/: values.yaml
kubeadm/test-app/: deployment.yaml  ingress.yaml  service.yaml
kubeadm/traefik/: values.yaml
opentofu/: README.md
opentofu/kubeadm/: .terraform.lock.hcl  control-plane-01.tf  control-plane-02.tf  control-plane-03.tf  control-plane.tf  node-01.tf  node-02.tf  node-03.tf  node.tf  provider.tf  terraform.tfvars.example  variables.tf
opentofu/nginx/: .terraform.lock.hcl
opentofu/patroni-postgresql/: .terraform.lock.hcl  provider.tf
opentofu/test_vm/: .terraform.lock.hcl  output.tf  provider.tf  terraform.tfvars.example  variables.tf  vm-01.tf  vm.tf
stepbystep/: README.md
stepbystep/01istall-vm/opentofu/: README.md
stepbystep/03test-aps/: 01deployment-nginx.yaml  02service-nginx-app.yaml  03statefulset.yaml  04job.yaml  05cronjob.yaml  command.md
stepbystep/04argocd/argocd/: README.md  (+4 more)
talos/: README.md  cilium.yaml  cp0.patch  cp1.patch  cp2.patch  patch.yaml  worker0.patch  worker1.patch  worker2.patch
talos/cilium/: ippool.yaml  l2-announcement-policy.yaml  values.yaml
talos/traefik/: values.yaml
(+117 files in other folders)
