[project]
authors = [{name = "Fedor Batonogov", email = "f.batonogov@yandex.ru"}]
dependencies = [
  "aioboto3==13.3.0",
  "aiobotocore==2.16.0",
  "aiofiles==24.1.0",
  "aiohappyeyeballs==2.4.4",
  "aiohttp==3.11.11",
  "aioitertools==0.12.0",
  "aiosignal==1.3.2",
  "annotated-types==0.7.0",
  "anyio==4.7.0",
  "asgi-lifespan==2.1.0",
  "asyncio==3.4.3",
  "attrs==24.3.0",
  "autoflake==2.3.1",
  "black==24.10.0",
  "boto3==1.35.81",
  "botocore==1.35.81",
  "certifi==2024.12.14",
  "cfgv==3.4.0",
  "charset-normalizer==3.4.1",
  "click==8.1.8",
  "contextvars==2.4",
  "distlib==0.3.9",
  "fastapi==0.115.6",
  "filelock==3.16.1",
  "flake8==7.1.1",
  "frozenlist==1.5.0",
  "h11==0.14.0",
  "httpcore==1.0.7",
  "httpx==0.28.1",
  "identify==2.6.4",
  "idna==3.10",
  "immutables==0.21",
  "iniconfig==2.0.0",
  "jmespath==1.0.1",
  "logging==0.4.9.6",
  "loguru==0.7.3",
  "mccabe==0.7.0",
  "multidict==6.1.0",
  "multipart==1.2.1",
  "mypy-extensions==1.0.0",
  "nodeenv==1.9.1",
  "packaging==24.2",
  "pathspec==0.12.1",
  "platformdirs==4.3.6",
  "pluggy==1.5.0",
  "pre_commit==4.0.1",
  "propcache==0.2.1",
  "pycodestyle==2.12.1",
  "pydantic==2.10.4",
  "pydantic-settings==2.7.1",
  "pydantic-core==2.27.2",
  "pyflakes==3.2.0",
  "pytest==8.3.4",
  "pytest-asyncio==0.25.1",
  "pytest-mock==3.14.0",
  "python-dateutil==2.9.0.post0",
  "python-dotenv==1.0.1",
  "python-multipart==0.0.20",
  "PyYAML==6.0.2",
  "requests==2.32.3",
  "s3transfer==0.10.4",
  "six==1.17.0",
  "sniffio==1.3.1",
  "starlette==0.41.3",
  "typing_extensions==4.12.2",
  "urllib3==2.3.0 ",
  "uvicorn==0.34.0",
  "virtualenv==20.28.1",
  "wrapt==1.17.0",
  "yarl==1.18.3"
]
dynamic = ["version"]
name = "uv"
requires-python = ">=3.13"
